feat: Documentacion y GitHub

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build",
+    "build": "ng build --configuration production --base-href='https://github.com/deminsantana/todo-list.git'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
