--- a/.github/workflows/deploy-angular.yml
+++ b/.github/workflows/deploy-angular.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build -- --configuration production --base-href=' https://github.com/deminsantana/todo-list.git'
+        run: npm run build -- --configuration production --base-href=/todo-list/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
