--- a/.github/workflows/deploy-angular.yml
+++ b/.github/workflows/deploy-angular.yml
@@ -1,6 +1,7 @@
 name: Deploy Angular to GitHub Pages
 
 on:
+  workflow_dispatch: # Permite la ejecución manual
   push:
     branches:
       - master # o el nombre de tu rama principal
